fix: change body text alignment from center to left

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@ body
   color: white;
   display: flex; 
   padding: 5vw;
-  text-align: center;
+  text-align: left;
 }
 
 #header
